<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_jardin"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margen_pantalla">

        <ImageView
            android:layout_width="@dimen/tamano_logo"
            android:layout_height="@dimen/tamano_logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/descripcion_logo"
            android:src="@drawable/logo_bloomora" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/espaciado_medio"
            android:text="@string/titulo_mi_jardin"
            android:textColor="@color/verde_oscuro"
            android:textSize="@dimen/texto_encabezado"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/espaciado_pequeno"
            android:gravity="center"
            android:text="@string/subtitulo_mi_jardin"
            android:textColor="@color/texto_secundario" />

        <TextView
            android:id="@+id/tvSinFlores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espaciado_grande"
            android:gravity="center"
            android:text="@string/sin_flores"
            android:textColor="@color/texto_secundario" />

        <LinearLayout
            android:id="@+id/contenedorJardin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espaciado_grande"
            android:background="@drawable/bg_boton_secundario"
            android:text="@string/volver"
            android:textColor="@color/verde_oscuro"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>

</ScrollView>